imp: getAuthInfo, modifyAuthInfo, modifyAvatar.
