# internal/service/validator/authInfo.go
@@ -1,0 +1,6 @@
+package validator
+
+type ModifyInfoRequest struct {
+	NickName string `form:"nick_name" binding:"max=20"`
+	Desc     string `form:"desc" binding:"max=50"`
+}
